longhorn/http-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui-http-route
  namespace: longhorn-system
spec:
  parentRefs:
  - name: http-gateway
    namespace: kube-system
  # - name: tls-gateway
  #   namespace: kube-system
  hostnames:
  - "longhorn-ui.pfs.pack"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: longhorn-frontend
      port: 80
      namespace: longhorn-system
